# k9

./: Cargo.toml
assets/shaders/: base2d.frag.glsl  base2d.vert.glsl  dbg_orange_frag.glsl  k9_texquad.vert.glsl  stdvert.glsl
k9_proc_macros/: Cargo.toml
k9_proc_macros/src/: lib.rs
src/: camera.rs  console_command.bnf  debug_ui.rs  entity_component.rs  graphics.rs  k9_egui_debug_ui.frag.glsl  lib.rs  process.rs  profile.rs  system.rs
src/debug_ui/: console.rs  egui_render_core.rs  k9_egui_debug_ui.vert.glsl
src/graphics/: component.rs  renderer.rs  system.rs
src/graphics/component/: texquad.rs
