[package]
name = "k9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3.1", features = ["v4"] }
sdl2 = { version = "0.35.2", features = ["bundled", "static-link"] }
glow = "0.12.1"
log = "0.4.17"
unescaper = "0.1.1"
bytemuck = "1.13.1"
image = "0.24.6"
windows_dpi = "0.3.0"
glam = "0.24.0"
egui = "0.21.0"
multi_log = "0.1.2"
egui_extras = "0.21.0"
k9_proc_macros = { path = "k9_proc_macros" }
bnf = "0.5.0"
time = { version = "0.3.20", features = ["local-offset"] }
